--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,12 @@
 @import url("./styles/base.css");
 @import url("./styles/button.css");
+@import url("./styles/decorations.css");
+@import url("./styles/fonts.css");
 @import url("./styles/footer.css");
 @import url("./styles/hero.css");
 @import url("./styles/link.css");
+@import url("./styles/list.css");
+@import url("./styles/steps.css");
 @import url("./styles/typography.css");
 
 .app {
@@ -24,5 +28,13 @@
 }
 
 .max-w-md {
-    max-width: 28rem;
+    max-width: 48rem;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.rounded {
+    border-radius: 0.25rem;
 }
