--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,3 +7,8 @@ body {
     color: var(--on-surface-color);
     font-family: system-ui, sans-serif;
 }
+
+img {
+    width: 100%;
+    height: 100%;
+}
