--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,6 +8,10 @@ body {
     font-family: system-ui, sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 img {
     width: 100%;
     height: 100%;
