--- a/src/styles/link.css
+++ b/src/styles/link.css
@@ -1,23 +1,26 @@
 @import url("variables.css");
 
 .link {
-    color: var(--secondary-color);
     text-decoration: none;
     transition-property: color;
     transition-timing-function: linear;
     transition-duration: .2s;
 }
 
-.link:hover {
+.link-secondary {
+    color: var(--secondary-color);
+}
+
+.link-secondary:hover {
     color: color-mix(in oklab, var(--secondary-color) 100%, #000 10%);
     text-decoration: underline;
 }
 
-.link:visited {
+.link-secondary:visited {
     color: color-mix(in oklab, var(--secondary-color) 100%, #000 20%);
     color: var(--secondary-color);
 }
 
-.link:active {
+.link-secondary:active {
     color: var(--secondary-color);
 }
