--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -16,8 +16,22 @@
     color: var(--secondary-color);
 }
 
+.text-base {
+    font-size: 16px;
+}
+
 .text-inverted {
     color: var(--on-surface-color-inverted);
+}
+
+.text-primary-gradient {
+    background-image: linear-gradient(140deg, var(--on-surface-color), var(--primary-color));
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.uppercase {
+    text-transform: uppercase;
 }
 
 @media screen and (min-width: 640px) {
